fix: Fix clear icon overlapping text on the input field (fixes #314)

--- a/src/VueDatePicker/style/components/_DatepickerInput.scss
+++ b/src/VueDatePicker/style/components/_DatepickerInput.scss
@@ -55,7 +55,7 @@
   stroke-width: 0;
   font-size: $dp__font_size;
   line-height: $dp__font_size * 1.5;
-  padding: $dp__input_padding;
+  padding: 6px 12px;
   color: var(--dp-icon-color);
   box-sizing: content-box;
 }
