--- a/src/VueDatePicker/style/components/_DatepickerMenu.scss
+++ b/src/VueDatePicker/style/components/_DatepickerMenu.scss
@@ -29,10 +29,7 @@
 
 %__dp_menu_readonly_disabled {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   z-index: 1;
 }
 
